--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.js" }
-  ]
+  "functions": {
+    "api/index.js": {
+      "runtime": "edge"
+    }
+  }
 }
