--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,12 @@
-{}
+{
+  "routes": [
+    {
+      "src": "^/api/(.*)$",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "^(?!/api/).*",
+      "dest": "/index.html"
+    }
+  ]
+}
